# jdruby

./: .gitignore  Cargo.toml  README.md  a.ll  a.rb  hello.ll
.agents/rules/: adapting.md
.agents/workflows/: context.md
.github/: labeler.yml
.github/workflows/: ci.yml  labeler.yml  release-experimental.yml  release.yml  rspec.yml  security.yml
crates/jdgc/: Cargo.toml
crates/jdgc/src/: abi.rs  allocator.rs  barrier.rs  collector.rs  header.rs  heap.rs  lib.rs  marker.rs  region.rs  roots.rs  scanning.rs  tlab.rs  util.rs
crates/jdruby/: Cargo.toml
crates/jdruby-ast/: Cargo.toml
crates/jdruby-ast/src/: lib.rs  nodes.rs
crates/jdruby-builder/: Cargo.toml
crates/jdruby-builder/src/: lib.rs
crates/jdruby-codegen/: Cargo.toml
crates/jdruby-codegen/src/: context.rs  instructions.rs  lib.rs  runtime.rs  utils.rs
crates/jdruby-codegen/src/constants/: mod.rs  pool.rs  table.rs
crates/jdruby-codegen/src/ir/: builder.rs  function.rs  mod.rs  types.rs  values.rs
crates/jdruby-codegen/src/optimize/: mod.rs  pass_manager.rs
crates/jdruby-codegen/src/register/: allocator.rs  mod.rs  virtual_reg.rs
crates/jdruby-codegen/src/selection/: arithmetic.rs  calls.rs  metaprogramming.rs  mod.rs  patterns.rs
crates/jdruby-common/: Cargo.toml
crates/jdruby-common/src/: diagnostic.rs  error.rs  ffi_types.rs  lib.rs  source.rs
crates/jdruby-ffi/: Cargo.toml
crates/jdruby-ffi/src/: bridge.rs  lib.rs  method_table.rs  ruby_capi.rs  value.rs
crates/jdruby-ffi/src/bridge/: allocator.rs  conversion.rs  dedup.rs  mod.rs  pinning.rs  registry.rs
crates/jdruby-ffi/src/capi/: array.rs  class.rs  constant.rs  exception.rs  gc.rs  hash.rs  immediate.rs  io.rs  ivar.rs  mod.rs  numeric.rs  runtime.rs  string.rs  symbol.rs
crates/jdruby-ffi/src/core/: constants.rs  mod.rs  type_tags.rs  types.rs
crates/jdruby-ffi/src/storage/: class_table.rs  constant_table.rs  ivar_storage.rs  method_storage.rs  mod.rs  symbol_table.rs
crates/jdruby-hir/: Cargo.toml
crates/jdruby-hir/src/: lib.rs  lower.rs  nodes.rs  opt_metaprogramming.rs  optimize.rs
crates/jdruby-jit/: Cargo.toml
crates/jdruby-jit/src/: binary_builder.rs  compiler.rs  interpreter.rs  lib.rs  optimizer.rs  profile.rs
crates/jdruby-jit/tests/: stress_tests.rs
crates/jdruby-lexer/: Cargo.toml
crates/jdruby-lexer/src/: lexer.rs  lib.rs  token.rs
crates/jdruby-meta/: Cargo.toml
crates/jdruby-meta/src/: block.rs  factory.rs  inline_cache.rs  lib.rs  method_table.rs  resolver.rs  traits.rs  types.rs
crates/jdruby-mir/: Cargo.toml
crates/jdruby-mir/src/: inline_cache.rs  lib.rs  lower.rs  nodes.rs  opt_fusion.rs  opt_peephole.rs  optimize.rs
crates/jdruby-parser/: Cargo.toml
crates/jdruby-parser/src/: lib.rs  parser.rs
crates/jdruby-runtime/: Cargo.toml
crates/jdruby-runtime/src/: class.rs  fiber.rs  gc.rs  lib.rs  object.rs  stdlib.rs  thread.rs  value.rs
crates/jdruby-runtime/src/stdlib/: array.rs  dir.rs  encoding.rs  hash.rs  io.rs  mod.rs  proc.rs  range.rs  string.rs  symbol.rs  thread_ext.rs  time.rs
crates/jdruby-semantic/: Cargo.toml
crates/jdruby-semantic/src/: analyzer.rs  lib.rs  scope.rs  types.rs
crates/jdruby/src/: main.rs
examples/: fibonnaci.rb  module_and_class.rb  puts2.rb  puts3.rb
