[workspace]
resolver = "2"
members = [
    "crates/jdruby",
    "crates/jdruby-common",
    "crates/jdruby-lexer",
    "crates/jdruby-ast",
    "crates/jdruby-parser",
    "crates/jdruby-semantic",
    "crates/jdruby-hir",
    "crates/jdruby-mir",
    "crates/jdruby-codegen",
    "crates/jdruby-runtime",
    "crates/jdruby-jit",
    "crates/jdruby-ffi",
    "crates/jdruby-builder",
    "crates/jdgc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["JDRuby Contributors"]
license = "MIT"
repository = "https://github.com/jdruby/jdruby"
description = "A full native Ruby compiler and runtime implemented in Rust"

[workspace.dependencies]
# Internal crates
jdruby-common = { path = "crates/jdruby-common" }
jdruby-lexer = { path = "crates/jdruby-lexer" }
jdruby-ast = { path = "crates/jdruby-ast" }
jdruby-parser = { path = "crates/jdruby-parser" }
jdruby-semantic = { path = "crates/jdruby-semantic" }
jdruby-hir = { path = "crates/jdruby-hir" }
jdruby-mir = { path = "crates/jdruby-mir" }
jdruby-codegen = { path = "crates/jdruby-codegen" }
jdruby-runtime = { path = "crates/jdruby-runtime" }
jdruby-jit = { path = "crates/jdruby-jit" }
jdruby-ffi = { path = "crates/jdruby-ffi" }
jdruby-builder = { path = "crates/jdruby-builder" }
jdgc = { path = "crates/jdgc" }

# External dependencies
clap = { version = "4", features = ["derive"] }
thiserror = "2"
ariadne = "0.4"
inkwell = { version = "0.7.0", features = ["llvm21-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

