[package]
name = "jdruby-ffi"
version.workspace = true
edition.workspace = true
description = "C-API compatibility layer (ruby.h shim) for JDRuby — enables native C-extension loading"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
jdruby-common.workspace = true
jdruby-runtime.workspace = true
jdgc = { path = "../jdgc" }
libc = "0.2"
