[package]
name = "jdruby-ffi"
version.workspace = true
edition.workspace = true
description = "C-API compatibility layer (ruby.h shim) for JDRuby — enables native C-extension loading"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
jdruby-common.workspace = true
jdruby-runtime = { path = "../jdruby-runtime" }
jdgc = { path = "../jdgc" }
parking_lot = "0.12"
libc = "0.2"
lazy_static = "1.4"
